Fix spacing and background colour of flash messages

--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -659,11 +659,11 @@ body,
   color: #000;
   padding: 1rem 1rem 1rem 4rem;
   position: relative;
-  margin: 0 0 1rem;
+  margin: 1.8rem 0;
 }
 /* line 8, ../sass/_global/_messages.scss */
 .alert button.close {
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(255, 255, 255, 0.1);
   position: absolute;
   top: 0;
   left: 0;
