--- a/app/webroot/sass/_global/_messages.scss
+++ b/app/webroot/sass/_global/_messages.scss
@@ -3,10 +3,10 @@
 	color: #000;
 	padding: 1rem 1rem 1rem 4rem;
 	position: relative;
-	margin: 0 0 1rem;
+	margin: 1.8rem 0;
 
 	button.close {
-		background: rgba(#000,0.1);
+		background: rgba(#FFF,0.1);
 		position: absolute;
 		top: 0;
 		left: 0;
